# tonic-metrics

./: Cargo.toml  LICENSE  README.md  build.rs
.config/: nextest.toml
.github/workflows/: ci.yml
src/: client.rs  lib.rs
tests/: echo.rs  gen-test-protos  integration.rs
tests/protos/: echo.proto
tests/snapshots/: integration__basic_client_metrics.snap  integration__basic_server_metrics.snap
