[package]
name = "tonic-metrics"
version = "0.1.0"
edition = "2024"

[dependencies]
http = "1.4.0"
metrics = "0.24.3"
tonic = "0.14.2"
tower = "0.5.2"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
prost = "0.14"
tonic-prost = "0.14.2"
insta = { version = "1.43", features = ["filters"]}
metrics-util = "0.20.1"
tonic-prost-build = "0.14.2"
