[package]
name = "tonic-metrics"
version = "0.1.0"
authors = ["Ross Sullivan <rosssullivan101@gmail.com>"]
edition = "2024"
description = "Metrics.rs integration for Tonic"
documentation = "https://docs.rs/tonic-metrics"
repository = "https://github.com/ranger-ross/tonic-metrics.git"
keywords = ["tonic", "grpc", "middleware", "metrics", "prometheus"]
categories = ["web-programming"]
license = "MIT"
readme = "README.md"
exclude = [".gitignore", ".github/", "examples/"]


[dependencies]
http = "1.4.0"
metrics = "0.24.3"
tonic = "0.14.2"
tower = "0.5.2"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
prost = "0.14"
tonic-prost = "0.14.2"
insta = { version = "1.43", features = ["filters"]}
metrics-util = "0.20.1"
tonic-prost-build = "0.14.2"
